logs/products.haufewingdbg.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/HaufeWingDBG'...
Compiling './lib/python3.5/site-packages/Products/HaufeWingDBG/DebugHttpServer.py'...
***   File "./lib/python3.5/site-packages/Products/HaufeWingDBG/DebugHttpServer.py", line 402
    except select.error, err:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/HaufeWingDBG/ScriptDebugging.py'...
***   File "./lib/python3.5/site-packages/Products/HaufeWingDBG/ScriptDebugging.py", line 57
    print "WingDBG PythonScript__init__ %s without filepath" % id
                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Products/HaufeWingDBG/WingDBG.py'...
***   File "./lib/python3.5/site-packages/Products/HaufeWingDBG/WingDBG.py", line 500
    except CannotStartDebugger, exc:
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/HaufeWingDBG/documentation'...
Listing './lib/python3.5/site-packages/Products/HaufeWingDBG/www'...
Listing './lib/python3.5/site-packages/Products.HaufeWingDBG-4.1.9.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
